--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@react-pdf/renderer": "^3.1.9",
+    "aos": "^2.3.4",
     "bootstrap": "^5.2.3",
     "firebase": "^9.21.0",
     "jspdf": "^2.5.1",
